@@ -1,14 +1,14 @@
-# @(#)Ident: Base.pm 2013-06-30 18:31 pjf ;
+# @(#)Ident: Base.pm 2013-06-30 20:05 pjf ;
 
 package Yakuake::Sessions::Base;
 
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.6.%d', q$Rev: 8 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.6.%d', q$Rev: 9 $ =~ /\d+/gmx );
 
 use Class::Usul::Constants;
 use Class::Usul::Functions  qw( app_prefix throw trim );
-use File::DataClass::Types  qw( ArrayRef Directory
-                                HashRef NonEmptySimpleStr Path );
+use File::DataClass::Types  qw( ArrayRef Directory HashRef
+                                NonEmptySimpleStr Path );
 use Moo;
 use MooX::Options;
 use Scalar::Util            qw( blessed );
@@ -117,7 +117,7 @@ Yakuake::Sessions::Base - Attributes and methods for Yakuake session management
 
 =head1 Version
 
-This documents version v0.6.$Rev: 8 $ of L<Yakuake::Sessions::Base>
+This documents version v0.6.$Rev: 9 $ of L<Yakuake::Sessions::Base>
 
 =head1 Description
 
